--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-hot-loader": "^4.11.1",
     "react-particles-js": "^2.6.0",
     "react-redux": "^7.1.0",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.0.1",
     "react-transition-group": "^4.1.1",
     "redux": "^4.0.1",
