--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
+    "quill": "^1.3.7",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
     "react-custom-scrollbars": "^4.2.1",
@@ -77,6 +78,7 @@
     "terser-webpack-plugin": "1.2.3",
     "ts-pnp": "1.1.2",
     "url-loader": "1.1.2",
+    "wangeditor": "^3.1.1",
     "webpack": "4.29.6",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
